--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">DS-1000: A Natural and Reliable Benchmark for Data Science Code Generation
+            <h1 class="title is-1 publication-title">RASAT: Integrating Relational Structures into Pretrained Seq2Seq Model for Text-to-SQL
             </h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
@@ -845,7 +845,7 @@ print(b)
       <div class="bibtex-body">
         <h2 class="title">BibTeX</h2>
         <pre><code>@article{Lai2022DS1000,
-  title={DS-1000: A Natural and Reliable Benchmark for Data Science Code Generation},
+  title={RASAT: Integrating Relational Structures into Pretrained Seq2Seq Model for Text-to-SQL},
   author={Yuhang Lai and Chengxi Li and Yiming Wang and Tianyi Zhang and Ruiqi Zhong and Luke Zettlemoyer and Scott Wen-tau Yih and Daniel Fried and Sida Wang and Tao Yu},
   journal={ArXiv},
   year={2022},
