--- a/index.html
+++ b/index.html
@@ -103,51 +103,45 @@
             </h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://halfrot.github.io/">Yuhang Lai*</a><sup>1</sup>,</span>
+                <a href="https://jiexingqi.github.io/">Jiexing Qi</a><sup>1</sup>,</span>
               <span class="author-block">
-                <a href="https://baigker.github.io/">Chengxi Li*</a><sup>1</sup>,</span>
+                <a href="#">Jingyao Tang</a><sup>1</sup>,</span>
               <span class="author-block">
-                <a href="https://rubywong123.github.io/">Yiming Wang*</a><sup>1,2</sup>,
+                <a href="#">Ziwei He</a><sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="https://tiiiger.github.io/">Tianyi Zhang*</a><sup>3</sup>,
+                <a href="#">Xiangpeng Wan</a><sup>2</sup>,
               </span>
               <span class="author-block">
-                <a href="https://ruiqi-zhong.github.io/">Ruiqi Zhong*</a><sup>4</sup>,
+                <a href="#">Yu Cheng</a><sup>3</sup>,
               </span>
 			  <br/>
               <span class="author-block">
-                <a href="https://www.cs.washington.edu/people/faculty/lsz">Luke Zettlemoyer</a><sup>5,6</sup>,
+                <a href="#">Chenghu Zhou</a><sup>1,4</sup>,
               </span>
               <span class="author-block">
-                <a href="http://scottyih.org/">Scott Wen-tau Yih</a><sup>6</sup>,
+                <a href="#">Xinbing Wang</a><sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="http://dpfried.github.io/">Daniel Fried</a><sup>7</sup>,
+                <a href="#">Quanshi Zhang</a><sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="http://www.sidaw.xyz/">Sida Wang</a><sup>6</sup>,
-              </span>
-              <span class="author-block">
-                <a href="https://taoyds.github.io/">Tao Yu</a><sup>1,5</sup>
+                <a href="https://hantek.github.io/">Zhouhan Lin</a><sup>1,*</sup>,
               </span>
             </div>
 
             <div class="is-size-5 publication-authors">
-              <span class="author-block"><sup>1</sup>The University of Hong Kong,</span>
-              <span class="author-block"><sup>2</sup>Peking University,</span>
-              <span class="author-block"><sup>3</sup>Stanford University,</span>
-              <span class="author-block"><sup>4</sup>University of California, Berkeley,</span>
-              <span class="author-block"><sup>5</sup>University of Washington,</span>
-              <span class="author-block"><sup>6</sup>Meta AI,</span>
-              <span class="author-block"><sup>7</sup>Carnegie Mellon University</span>
+              <span class="author-block"><sup>1</sup>Shanghai Jiao Tong University,</span>
+              <span class="author-block"><sup>2</sup>NetMind.AI and ProtagoLabs,</span>
+              <span class="author-block"><sup>3</sup>Microsoft Research, Redmond,</span>
+              <span class="author-block"><sup>4</sup>IGSNRR, Chinese Academy of Sciences</span>
             </div>
 
             <div class="column has-text-centered">
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/2211.11501"
+                  <a href="https://arxiv.org/abs/2205.06983"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -157,7 +151,7 @@
                 </span>
                 <!-- Code Link. -->
                 <span class="link-block">
-                  <a href="https://github.com/HKUNLP/DS-1000"
+                  <a href="https://github.com/LUMIA-Group/rasat"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -165,24 +159,14 @@
                     <span>Code</span>
                   </a>
                 </span>
-                <!-- Dataset Link. -->
+                <!-- Talk Link. -->
                 <span class="link-block">
-                  <a href="https://github.com/HKUNLP/DS-1000/tree/main/ds1000_example"
+                  <a href="https://www.techbeat.net/talk-info?id=719"
                      class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="far fa-images"></i>
                     </span>
-                    <span>Data</span>
-                  </a>
-                </span>
-                <!-- Twitter Link. -->
-                <span class="link-block">
-                  <a href="https://twitter.com/taoyds/status/1595086401309388801"
-                    class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="fab fa-twitter"></i>
-                    </span>
-                    <span>Twitter</span>
+                    <span>Talk</span>
                   </a>
                 </span>
               </div>
@@ -198,11 +182,8 @@
     <div class="container is-max-desktop">
       <div class="hero-body">
         <h2 class="subtitle has-text-centered">
-          DS-1000 is a code generation benchmark with a thousand data science questions spanning seven Python libraries
-          that
-          (1) reflects diverse, realistic, and practical use cases,
-          (2) has a reliable metric,
-          (3) defends against memorization by perturbing questions.
+          RASAT is a Transformer seq2seq architecture augmented with relation-aware self-attention that could leverage a variety of relational structures while inheriting the pretrained parameters 
+          from the T5 model effectively. It could handle single-turn and multi-turn text-to-SQL semantic parsing tasks and achieved State-Of-The-Art performance on Spider, SParC and CoSQL dataset.
         </h2>
         <img src="static/images/fig1-example.jpg">
       </div>
@@ -218,21 +199,30 @@
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
             <p>
-              We introduce DS-1000, a code generation benchmark with a thousand
-              data science problems spanning seven Python libraries, such as NumPy
-              and Pandas. Compared to prior works, DS-1000 incorporates three core
-              features. First, our problems reflect diverse, realistic, and practical
-              use cases since we collected them from StackOverflow. Second, our
-              automatic evaluation is highly specific (reliable) – across all
-              Codex-002-predicted solutions that our evaluation accepts, only 1.8% of
-              them is incorrect; we achieve this with multi-criteria metrics, checking
-              both functional correctness by running test cases and surface form
-              constraints by restricting API usages or keywords. Finally, we proactively
-              defend against memorization by slightly modifying our problems to
-              be different from the original StackOverflow source; consequently, models
-              cannot answer them correctly by memorizing the solutions from pre-training.
-              The current best public system (Codex-002) achieves 43.3% accuracy,
-              leaving ample room for improvement.
+              Relational structures such as schema linking
+              and schema encoding have been validated as a
+              key component to qualitatively translating nat-
+              ural language into SQL queries. However, in-
+              troducing these structural relations comes with
+              prices: they often result in a specialized model
+              structure, which largely prohibits using large
+              pretrained models in text-to-SQL. To address
+              this problem, we propose RASAT: a Trans-
+              former seq2seq architecture augmented with
+              relation-aware self-attention that could lever-
+              age a variety of relational structures while in-
+              heriting the pretrained parameters from the T5
+              model effectively. Our model can incorpo-
+              rate almost all types of existing relations in
+              the literature, and in addition, we propose in-
+              troducing co-reference relations for the multi-
+              turn scenario. Experimental results on three
+              widely used text-to-SQL datasets, covering
+              both single-turn and multi-turn scenarios, have
+              shown that RASAT could achieve state-of-the-
+              art results across all three benchmarks (75.5%
+              EX on Spider, 52.6% IEX on SParC, and
+              37.4% IEX on CoSQL).
             </p>
           </div>
         </div>
