--- a/index.html
+++ b/index.html
@@ -68,23 +68,8 @@
             More Research
           </a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="https://yale-lily.github.io/spider">
-              Spider
-            </a>
-            <a class="navbar-item" href="https://unifiedskg.com">
-              UnifiedSKG
-            </a>
-            <a class="navbar-item" href="https://github.com/Yushi-Hu/IC-DST">
-              IC-DST
-            </a>
-            <a class="navbar-item" href="https://github.com/HKUNLP/icl-selective-annotation">
-              Selective Annotation
-            </a>
-            <a class="navbar-item" href="https://lm-code-binder.github.io/">
-              Binder
-            </a>
-            <a class="navbar-item" href="https://instructor-embedding.github.io/">
-              Instructor
+            <a class="navbar-item" href="https://lot-insts.github.io/">
+              lot-insts
             </a>
           </div>
         </div>
